Bug 504821 - New versions no longer offered for updated
Summary: New versions no longer offered for updated
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: rpm-ostree Backend (other bugs)
Version First Reported In: master
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-26 16:29 UTC by Timothée Ravier
Modified: 2025-06-03 15:01 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timothée Ravier 2025-05-26 16:29:07 UTC
SUMMARY

New rpm-ostree versions are no longer offered for update following the isfetching/stream rework.

See: https://invent.kde.org/plasma/discover/-/merge_requests/1099

STEPS TO REPRODUCE
1. Use latest Discover code on Kinoite
2. Refresh to look for update

OBSERVED RESULT

No version found even if update is available

EXPECTED RESULT

Available update offered.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora Kinoite 42
KDE Plasma Version:
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-06-03 14:21:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1107
Comment 2 Aleix Pol 2025-06-03 14:52:38 UTC
Git commit 7cb4fc2f258a3fee6829571b5d50b0c4e41757f2 by Aleix Pol.
Committed on 03/06/2025 at 14:21.
Pushed by ravier into branch 'master'.

rpm-ostree: Fix updates count reporting

Delegate it to the StandardBackendUpdater rather than doing it on both
ends.
Less code and it actually works.

M  +3    -14   libdiscover/backends/RpmOstreeBackend/RpmOstreeBackend.cpp

https://invent.kde.org/plasma/discover/-/commit/7cb4fc2f258a3fee6829571b5d50b0c4e41757f2
Comment 3 Timothée Ravier 2025-06-03 15:01:32 UTC
Git commit 71994b7c11396484f574c04fa4b12c6823b00fe9 by Timothée Ravier, on behalf of Aleix Pol.
Committed on 03/06/2025 at 14:52.
Pushed by ravier into branch 'Plasma/6.4'.

rpm-ostree: Fix updates count reporting

Delegate it to the StandardBackendUpdater rather than doing it on both
ends.
Less code and it actually works.

M  +3    -14   libdiscover/backends/RpmOstreeBackend/RpmOstreeBackend.cpp

https://invent.kde.org/plasma/discover/-/commit/71994b7c11396484f574c04fa4b12c6823b00fe9