rpm-ostree: Fix updates count reporting

Delegate it to the StandardBackendUpdater rather than doing it on both
ends.
Less code and it actually works.

BUG: 504821